--- a/SoftServeITA/Docker/flask-app/templates/index.html
+++ b/SoftServeITA/Docker/flask-app/templates/index.html
@@ -22,7 +22,7 @@
             <h4>Cat Gif of the day</h4>
             <img src="{{url}}" />
             <p>
-                <small>Courtesy: <a href="http://www.buzzfeed.com/copyranter/the-best-cat-gif-post-in-the-history-of-cat-gifs">Buzzfeed</a></small>
+                <small>Courtesy: <a href="https://www.showpo.com/us/showpoedit/life/funniest-cat-gifs-net.html">Showpo</a></small>
             </p>
         </div>
     </body>
